--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.1",
   "description": "run job from laravel",
   "main": "index.js",
+  "homepage":"https://github.com/icfr/laravel-node-queue",
+  "bugs":"https://github.com/icfr/laravel-node-queue/issues",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "./scripts/install.sh"
@@ -13,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "''"
+    "url": "https://github.com/icfr/laravel-node-queue.git"
   },
   "keywords": [
     "laravel",
