--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,6 +6,8 @@ engines:
       languages:
         javascript:
           mass_threshold: 70
+    exclude_paths:
+      - test/
   eslint:
     enabled: true
     channel: eslint-2
@@ -18,3 +20,4 @@ ratings:
   - "**.js"
 exclude_paths:
 - node_modules/
+- test/data/
