--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 ecmaFeatures:
   modules: true
 
+#plugins: ["jsdoc"]
+
 env:
   amd: true
   es6: true
@@ -9,7 +11,7 @@ env:
 # http://eslint.org/docs/rules/
 rules:
   # Possible Errors
-  comma-dangle: [2, never]
+  comma-dangle: [2, "never"]
   no-cond-assign: 2
   no-console: 0
   no-constant-condition: 2
@@ -25,7 +27,7 @@ rules:
   no-extra-parens: 2
   no-extra-semi: 2
   no-func-assign: 2
-  no-inner-declarations: [2, functions]
+  no-inner-declarations: [2, "functions"]
   no-invalid-regexp: 2
   no-irregular-whitespace: 2
   no-negated-in-lhs: 2
@@ -207,3 +209,16 @@ rules:
   prefer-spread: 0
   prefer-template: 0
   require-yield: 0
+
+  #jsdoc
+  // jsdoc/check-param-names: 0
+  // jsdoc/check-tag-names: 1
+  // jsdoc/check-types: 1
+  // jsdoc/newline-after-description: 1
+  // jsdoc/require-description-complete-sentence: 1
+  // jsdoc/require-hyphen-before-param-description: 1
+  // jsdoc/require-param: 1
+  // jsdoc/require-param-description: 1
+  // jsdoc/require-param-type: 1
+  // jsdoc/require-returns-description: 1
+  // jsdoc/require-returns-type: 1
