--- a/.eslintrc
+++ b/.eslintrc
@@ -1,224 +1,197 @@
-ecmaFeatures:
-  modules: true
+{
+  "env": {
+    "amd": true,
+    "es6": true,
+    "node": true,
+    "jest": true
+  },
+  "rules": {
+    "comma-dangle": [2, "never"],
+    "no-cond-assign": 2,
+    "no-console": 0,
+    "no-constant-condition": 2,
+    "no-control-regex": 0,
+    "no-debugger": 2,
+    "no-dupe-args": 2,
+    "no-dupe-keys": 2,
+    "no-duplicate-case": 2,
+    "no-empty": 2,
+    "no-empty-character-class": 2,
+    "no-ex-assign": 2,
+    "no-extra-boolean-cast": 2,
+    "no-extra-parens": 2,
+    "no-extra-semi": 2,
+    "no-func-assign": 2,
+    "no-inner-declarations": [2, "functions"],
+    "no-invalid-regexp": 2,
+    "no-irregular-whitespace": 2,
+    "no-negated-in-lhs": 2,
+    "no-obj-calls": 2,
+    "no-regex-spaces": 2,
+    "no-sparse-arrays": 2,
+    "no-unexpected-multiline": 2,
+    "no-unreachable": 2,
+    "use-isnan": 2,
+    "valid-jsdoc": 2,
+    "valid-typeof": 2,
+    "accessor-pairs": 2,
+    "block-scoped-var": 2,
+    "complexity": [2, 15],
+    "consistent-return": 0,
+    "curly": 2,
+    "default-case": 1,
+    "dot-location": 0,
+    "dot-notation": 2,
+    "eqeqeq": 2,
+    "guard-for-in": 2,
+    "no-alert": 2,
+    "no-caller": 2,
+    "no-case-declarations": 2,
+    "no-div-regex": 2,
+    "no-else-return": 2,
+    "no-empty-pattern": 2,
+    "no-eq-null": 2,
+    "no-eval": 2,
+    "no-extend-native": 2,
+    "no-extra-bind": 2,
+    "no-fallthrough": 2,
+    "no-floating-decimal": 2,
+    "no-implicit-coercion": 2,
+    "no-implied-eval": 2,
+    "no-invalid-this": 2,
+    "no-iterator": 2,
+    "no-labels": 2,
+    "no-lone-blocks": 2,
+    "no-loop-func": 2,
+    "no-magic-numbers": [2,{"ignore": [0,1,-1,2]}],
+    "no-multi-spaces": 2,
+    "no-multi-str": 2,
+    "no-native-reassign": 2,
+    "no-new-func": 2,
+    "no-new-wrappers": 2,
+    "no-new": 2,
+    "no-octal-escape": 2,
+    "no-octal": 2,
+    "no-proto": 2,
+    "no-redeclare": 2,
+    "no-return-assign": 2,
+    "no-script-url": 2,
+    "no-self-compare": 2,
+    "no-sequences": 2,
+    "no-throw-literal": 2,
+    "no-unused-expressions": 2,
+    "no-useless-call": 2,
+    "no-useless-concat": 2,
+    "no-void": 2,
+    "no-warning-comments": 0,
+    "no-with": 2,
+    "radix": 2,
+    "vars-on-top": 0,
+    "wrap-iife": [2,"any"],
+    "yoda": 2,
+    "strict": 2,
+    "init-declarations": 0,
+    "no-catch-shadow": 2,
+    "no-delete-var": 2,
+    "no-label-var": 2,
+    "no-shadow-restricted-names": 2,
+    "no-shadow": 2,
+    "no-undef-init": 2,
+    "no-undef": 2,
+    "no-undefined": 2,
+    "no-unused-vars": 2,
+    "no-use-before-define": 2,
+    "callback-return": 2,
+    "global-require": 2,
+    "handle-callback-err": 2,
+    "no-mixed-requires": 2,
+    "no-new-require": 2,
+    "no-path-concat": 2,
+    "no-process-exit": 2,
+    "no-restricted-modules": 0,
+    "no-sync": 0,
+    "array-bracket-spacing": 1,
+    "block-spacing": 2,
+    "brace-style": 2,
+    "camelcase": [1,{ "properties": "never" }],
+    "comma-spacing": 1,
+    "comma-style": 1,
+    "computed-property-spacing": 0,
+    "consistent-this": [1,"self"],
+    "eol-last": 1,
+    "func-names": 2,
+    "func-style": 2,
+    "id-length": [2,{ "exceptions": ["Q","_"] }],
+    "id-match": 0,
+    "indent": [1,2,{"SwitchCase":1}],
+    "jsx-quotes": 0,
+    "key-spacing": 0,
+    "linebreak-style": 1,
+    "lines-around-comment": 0,
+    "max-depth": 0,
+    "max-len": [2,120],
+    "max-nested-callbacks": [2,4],
+    "max-params": 0,
+    "max-statements": [2, 35],
+    "new-cap": 2,
+    "new-parens": 2,
+    "newline-after-var": 0,
+    "no-array-constructor": 2,
+    "no-bitwise": 2,
+    "no-continue": 0,
+    "no-inline-comments": 2,
+    "no-lonely-if": 1,
+    "no-mixed-spaces-and-tabs": 2,
+    "no-multiple-empty-lines": 2,
+    "no-negated-condition": 2,
+    "no-nested-ternary": 2,
+    "no-new-object": 0,
+    "no-plusplus": 0,
+    "no-restricted-syntax": 0,
+    "no-spaced-func": 2,
+    "no-ternary": 0,
+    "no-trailing-spaces": 2,
+    "no-underscore-dangle": 0,
+    "no-unneeded-ternary": 2,
+    "object-curly-spacing": 0,
+    "one-var": 0,
+    "operator-assignment": 0,
+    "operator-linebreak": 0,
+    "padded-blocks": 0,
+    "quote-props": 0,
+    "quotes": 0,
+    "require-jsdoc": 0,
+    "semi-spacing": 0,
+    "semi": 2,
+    "sort-vars": 0,
+    "keyword-spacing": 2,
+    "space-before-blocks": 0,
+    "space-before-function-paren": 0,
+    "space-before-keywords": 0,
+    "space-in-parens": 0,
+    "space-infix-ops": 0,
+    "space-return-throw-case": 0,
+    "space-unary-ops": 0,
+    "spaced-comment": 0,
+    "wrap-regex": 2,
+    "arrow-body-style": 0,
+    "arrow-parens": 0,
+    "arrow-spacing": 0,
+    "constructor-super": 0,
+    "generator-star-spacing": 0,
+    "no-arrow-condition": 0,
+    "no-class-assign": 0,
+    "no-const-assign": 0,
+    "no-dupe-class-members": 0,
+    "no-this-before-super": 0,
+    "no-var": 0,
+    "object-shorthand": 0,
+    "prefer-arrow-callback": 0,
+    "prefer-const": 0,
+    "prefer-reflect": 0,
+    "prefer-spread": 0,
+    "prefer-template": 0,
+    "require-yield": 0
+  }
 
-#plugins: ["jsdoc"]
-
-env:
-  amd: true
-  es6: true
-  node: true
-
-# http://eslint.org/docs/rules/
-rules:
-  # Possible Errors
-  comma-dangle: [2, "never"]
-  no-cond-assign: 2
-  no-console: 0
-  no-constant-condition: 2
-  no-control-regex: 2
-  no-debugger: 2
-  no-dupe-args: 2
-  no-dupe-keys: 2
-  no-duplicate-case: 2
-  no-empty: 2
-  no-empty-character-class: 2
-  no-ex-assign: 2
-  no-extra-boolean-cast: 2
-  no-extra-parens: 2
-  no-extra-semi: 2
-  no-func-assign: 2
-  no-inner-declarations: [2, "functions"]
-  no-invalid-regexp: 2
-  no-irregular-whitespace: 2
-  no-negated-in-lhs: 2
-  no-obj-calls: 2
-  no-regex-spaces: 2
-  no-sparse-arrays: 2
-  no-unexpected-multiline: 2
-  no-unreachable: 2
-  use-isnan: 2
-  valid-jsdoc: 2
-  valid-typeof: 2
-
-  # Best Practices
-  accessor-pairs: 2
-  block-scoped-var: 2
-  complexity: [2, 15]
-  consistent-return: 0
-  curly: 2
-  default-case: 1
-  dot-location: 0
-  dot-notation: 2
-  eqeqeq: 2
-  guard-for-in: 2
-  no-alert: 2
-  no-caller: 2
-  no-case-declarations: 2
-  no-div-regex: 2
-  no-else-return: 2
-  no-empty-pattern: 2
-  no-eq-null: 2
-  no-eval: 2
-  no-extend-native: 2
-  no-extra-bind: 2
-  no-fallthrough: 2
-  no-floating-decimal: 2
-  no-implicit-coercion: 2
-  no-implied-eval: 2
-  no-invalid-this: 2
-  no-iterator: 2
-  no-labels: 2
-  no-lone-blocks: 2
-  no-loop-func: 2
-  no-magic-numbers: [2,{"ignore": [0,1,-1,2]}]
-  no-multi-spaces: 2
-  no-multi-str: 2
-  no-native-reassign: 2
-  no-new-func: 2
-  no-new-wrappers: 2
-  no-new: 2
-  no-octal-escape: 2
-  no-octal: 2
-  no-proto: 2
-  no-redeclare: 2
-  no-return-assign: 2
-  no-script-url: 2
-  no-self-compare: 2
-  no-sequences: 2
-  no-throw-literal: 2
-  no-unused-expressions: 2
-  no-useless-call: 2
-  no-useless-concat: 2
-  no-void: 2
-  no-warning-comments: 0
-  no-with: 2
-  radix: 2
-  vars-on-top: 0
-  wrap-iife: [2,"any"]
-  yoda: 2
-
-  # Strict
-  strict: 2
-
-  # Variables
-  init-declarations: 0
-  no-catch-shadow: 2
-  no-delete-var: 2
-  no-label-var: 2
-  no-shadow-restricted-names: 2
-  no-shadow: 2
-  no-undef-init: 2
-  no-undef: 2
-  no-undefined: 2
-  no-unused-vars: 2
-  no-use-before-define: 2
-
-  # Node.js and CommonJS
-  callback-return: 2
-  global-require: 2
-  handle-callback-err: 2
-  no-mixed-requires: 2
-  no-new-require: 2
-  no-path-concat: 2
-  no-process-exit: 2
-  no-restricted-modules: 0
-  no-sync: 0
-
-  # Stylistic Issues
-  array-bracket-spacing: 1
-  block-spacing: 2
-  brace-style: 2
-  camelcase: [1,{ "properties": "never" }]
-  comma-spacing: 1
-  comma-style: 1
-  computed-property-spacing: 0
-  consistent-this: [1,"self"]
-  eol-last: 1
-  func-names: 2
-  func-style: 2
-  id-length: [2,{ "exceptions": ["Q","_"] }]
-  id-match: 0
-  indent: [1,2,{"SwitchCase":1}]
-  jsx-quotes: 0
-  key-spacing: 0
-  linebreak-style: 1
-  lines-around-comment: 0
-  max-depth: 0
-  max-len: [2,120]
-  max-nested-callbacks: [2,4]
-  max-params: 0
-  max-statements: [2, 35]
-  new-cap: 2
-  new-parens: 2
-  newline-after-var: 0
-  no-array-constructor: 2
-  no-bitwise: 2
-  no-continue: 0
-  no-inline-comments: 2
-  no-lonely-if: 1
-  no-mixed-spaces-and-tabs: 2
-  no-multiple-empty-lines: 2
-  no-negated-condition: 2
-  no-nested-ternary: 2
-  no-new-object: 0
-  no-plusplus: 0
-  no-restricted-syntax: 0
-  no-spaced-func: 2
-  no-ternary: 0
-  no-trailing-spaces: 2
-  no-underscore-dangle: 0
-  no-unneeded-ternary: 2
-  object-curly-spacing: 0
-  one-var: 0
-  operator-assignment: 0
-  operator-linebreak: 0
-  padded-blocks: 0
-  quote-props: 0
-  quotes: 0
-  require-jsdoc: 0
-  semi-spacing: 0
-  semi: 2
-  sort-vars: 0
-  keyword-spacing: 2
-  space-before-blocks: 0
-  space-before-function-paren: 0
-  space-before-keywords: 0
-  space-in-parens: 0
-  space-infix-ops: 0
-  space-return-throw-case: 0
-  space-unary-ops: 0
-  spaced-comment: 0
-  wrap-regex: 2
-
-  # ECMAScript 6
-  arrow-body-style: 0
-  arrow-parens: 0
-  arrow-spacing: 0
-  constructor-super: 0
-  generator-star-spacing: 0
-  no-arrow-condition: 0
-  no-class-assign: 0
-  no-const-assign: 0
-  no-dupe-class-members: 0
-  no-this-before-super: 0
-  no-var: 0
-  object-shorthand: 0
-  prefer-arrow-callback: 0
-  prefer-const: 0
-  prefer-reflect: 0
-  prefer-spread: 0
-  prefer-template: 0
-  require-yield: 0
-
-  #jsdoc
-  // jsdoc/check-param-names: 0
-  // jsdoc/check-tag-names: 1
-  // jsdoc/check-types: 1
-  // jsdoc/newline-after-description: 1
-  // jsdoc/require-description-complete-sentence: 1
-  // jsdoc/require-hyphen-before-param-description: 1
-  // jsdoc/require-param: 1
-  // jsdoc/require-param-description: 1
-  // jsdoc/require-param-type: 1
-  // jsdoc/require-returns-description: 1
-  // jsdoc/require-returns-type: 1
+}
