--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "author": "ICFR",
   "license": "MIT",
   "dependencies": {
-    "bee-queue": "^0.3.0",
+    "bee-queue": "~1.2.2",
     "colors": "~1.3.3",
     "debug-logger": "^0.4.1",
     "diff": "~3.5.0",
@@ -41,20 +41,20 @@
     "include-all": "~4.0.3",
     "intercept-stdout": "^0.1.2",
     "ioredis": "~2.5.0",
-    "js-beautify": "~1.8.9",
+    "js-beautify": "~1.9.1",
     "lodash": "~4.17.11",
     "lodash-inflection": "~1.5.0",
     "merge": "~1.2.1",
     "mock-stdin": "~0.3.1",
-    "mysql": "~2.16.0",
+    "mysql": "~2.17.0",
     "nodemailer": "~2.7.2",
     "pad": "~1.2.1",
     "raven": "~0.12.3",
     "readdir": "~0.1.0",
     "rewire": "^2.5.2",
-    "sequelize": "~4.42.0",
+    "sequelize": "~5.7.0",
     "shelljs": "~0.8.3",
-    "tmp": "0.0.33"
+    "tmp": "~0.1.0"
   },
   "devDependencies": {
     "minami": "~1.2.3",
